Fixed overlap logic and green square visual glitch

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -268,21 +268,24 @@ ul {
   color: #00B3FF;
 }
 
-.statusClass {
-  display: inline-block;
-  width: 1.5em;
-  height: 1.5em;
-  vertical-align: top;
+/* .statusClass {
+  /* display: inline-block; */
+  /* width: 1.5em; */
+  /* height: 1.5em; */
+  /* vertical-align: top; */
   /* padding-top: 1px; */
-  margin-left: 2px;
-  text-align: center;
+  /* margin-left: 2px; */
+  /* margin-top: 0.15em; */
+  /* text-align: center; */
   /* line-height: 13px; */
-  border-radius: 2px;
-}
+  /* border-radius: 2px; */
+  /* -webkit-font-smoothing: antialiased; */
 
-.openSec {
+} */
+
+/* .openSec {
   background-color: #47EA4C;
-}
+} */
 
 .closedSec {
   background-color: transparent;
